parser.c
// Copyright (C) 2026 leo z <zlx20010815@gmail.com>
// SPDX-License-Identifier: GPL-3.0-or-later

/* This file is part of BAS.
 *
 * BAS is free software: you can redistribute it and/or modify it under the
 * terms of the GNU General Public License as published by the Free Software
 * Foundation, either version 3 of the License, or (at your option) any later
 * version.
 *
 * BAS is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
 * details.
 *
 * You should have received a copy of the GNU General Public License along with
 * BAS. If not, see <https://www.gnu.org/licenses/>.
 */

#include "bas.h"

#define ERR(str) {if (!IN_RANGE) {fprintf(stderr,\
		"token stream ended prematurely\n");\
		for(int i=0;i<node->childCount;i++)\
		{if(node->children[i]!=NULL)free_tree(node->children[i]);}\
		if(node->children!=NULL)free(node->children);free(node);\
		return NULL;}\
		fprintf(stderr, "%s at %d,%d: `%s`,\n",\
		str,context->tokenPtr->lineNum, context->tokenPtr->colNum,\
		context->tokenPtr->lexeme);\
		for(int i=0;i<node->childCount;i++)\
		{if(node->children[i]!=NULL)free_tree(node->children[i]);}\
		if(node->children!=NULL)free(node->children);free(node);\
		context->err = true ;return NULL;}
#define ERR_NOFREE(str) {if (!IN_RANGE) {fprintf(stderr,\
		 "token stream ended prematurely\n");\
		return NULL;}fprintf(stderr, "%s at %d,%d: `%s`,\n",\
		str,context->tokenPtr->lineNum, context->tokenPtr->colNum,\
		context->tokenPtr->lexeme); context->err = true ;return NULL;}
#define IN_RANGE (context->len < context->tokenLen)
#define LAST_TOKEN (context->len == context->tokenLen-1)
#define ERR_RET(n) {if (!n) {context->err=true;\
		for(int i=0;i<node->childCount;i++)\
		{if(node->children[i]!=0)free_tree(node->children[i]);}\
		if(node->children!=NULL)free(node->children);\
		free(node);return NULL;}}
#define ERR_RET_NOFREE(n) {if (!n) {context->err=true;return NULL;}}
#define CONSUME_TOKEN {if (!IN_RANGE) \
		{ERR("Token stream ended prematurely")}; context->tokenPtr++; \
		context->len++;}
#define CONSUME_TOKEN_NOFREE {if (!IN_RANGE) \
		{ERR_NOFREE("Token stream ended prematurely")}; context->tokenPtr++; \
		context->len++;}

/*
void parse(ParserContext *context)
{
	if (context->tokenPtr == NULL || context->prog == NULL) {
		fprintf(stderr, "Parser context is not initialized.\n");
		return;
	}
	int lineNum = 0;
	while (context->tokenPtr != NULL) {
		context->prog->lines[lineNum] = parseLine(context);
		lineNum++;
	}
}
*/

void free_tree(ParseTreeNode *node)
{
	for (int i = 0; i < node->childCount; i++) {
		free_tree(node->children[i]);
	}
	free(node->children);
	free(node);
}

ParseTreeNode *parseLine(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = ROOT;
	int i = 0;
	if (IN_RANGE && context->tokenPtr->type == INT_TOKEN) {
		node->children = malloc(sizeof(uintptr_t));
		node->children[i] = parseLinenum(context);
		ERR_RET(node->children[i]);
		node->childCount++;
		i++;
	}
	node->children = realloc(node->children, (i+1)*sizeof(uintptr_t));
	node->children[i] = parseStatement(context);
	ERR_RET(node->children[i]);
	node->childCount++;
	if (IN_RANGE) {
		fprintf(stderr, "%s at %d,%d: `%s`\n",
				"Unexpected token",
				context->tokenPtr->lineNum, 
				context->tokenPtr->colNum,
				context->tokenPtr->lexeme);
		context->err = true;
	}
	//parseEOL(context);
	return node;
}

ParseTreeNode *parseIdentifier(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && context->tokenPtr->type == IDENT_TOKEN) {
		node->type = IDENTI;
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
		if (IN_RANGE && context->tokenPtr->type == PAREN_TOKEN
			&& strcmp(context->tokenPtr->lexeme, "(") == 0) {
			CONSUME_TOKEN;
			node->childCount = 0;
			do {
				if (IN_RANGE && context->tokenPtr->type == COMMA_TOKEN) {
					if (node->childCount > 0)
						CONSUME_TOKEN;
				}
				node->children = realloc(node->children, (node->childCount+1)*sizeof(uintptr_t));
				node->children[node->childCount] = parseExpr(context);
				ERR_RET(node->children[node->childCount]);
				node->childCount++;
			} while (IN_RANGE && context->tokenPtr->type == COMMA_TOKEN);
			if (IN_RANGE && context->tokenPtr->type == PAREN_TOKEN
				&& strcmp(context->tokenPtr->lexeme, ")") == 0) {
				CONSUME_TOKEN;
			} else {
				ERR("Expected closing parenthesis");
			}
		}
	}else {
			ERR("Expected identifiers");
	}
	return node;
}

ParseTreeNode *parseEqual(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && context->tokenPtr->type == RELOP_TOKEN
		&& strcmp(context->tokenPtr->lexeme, "=") == 0) {
		node->type = EQUALS;
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}else {
			ERR("Expected `=`");
	}
	return node;
}

ParseTreeNode *parseRelOperator(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && context->tokenPtr->type == RELOP_TOKEN) {
		if (strcmp(context->tokenPtr->lexeme, ">") == 0)
			node->type = GT;
		else if (strcmp(context->tokenPtr->lexeme, ">=") == 0)
			node->type = GE;
		else if (strcmp(context->tokenPtr->lexeme, "<") == 0)
			node->type = LT;
		else if (strcmp(context->tokenPtr->lexeme, "<=") == 0)
			node->type = LE;
		else if (strcmp(context->tokenPtr->lexeme, "=") == 0)
			node->type = EQ;
		else if (strcmp(context->tokenPtr->lexeme, "==") == 0)
			node->type = EQ;
		else if (strcmp(context->tokenPtr->lexeme, "<>") == 0)
			node->type = NE;
		else if (strcmp(context->tokenPtr->lexeme, "!=") == 0)
			node->type = NE;
		else
			ERR("Expected relops");
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	} else {
			ERR("Expected relops");
	}
	return node;
}

ParseTreeNode *parseAddOperand(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && context->tokenPtr->type == OP_TOKEN
		&& (strcmp(context->tokenPtr->lexeme, "+") == 0
			|| strcmp(context->tokenPtr->lexeme, "-") == 0)) {
		node->type = ADD_OP;
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}else {
			ERR("Expected `+` or `-`");
	}
	return node;
}

ParseTreeNode *parseMulOperand(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && context->tokenPtr->type == OP_TOKEN
		&& (strcmp(context->tokenPtr->lexeme, "*") == 0
			|| strcmp(context->tokenPtr->lexeme, "/") == 0
			|| strcmp(context->tokenPtr->lexeme, "%") == 0)) {
		node->type = MUL_OP;
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}else {
			ERR("Expected `*`, `/` or `%`");
	}
	return node;
}

ParseTreeNode *parseUnaryOperand(ParserContext *context)
{
	ParseTreeNode *node =
			(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (IN_RANGE && ((context->tokenPtr->type == OP_TOKEN
		&& (strcmp(context->tokenPtr->lexeme, "+") == 0
			|| strcmp(context->tokenPtr->lexeme, "-") == 0))
		|| (context->tokenPtr->type == KEYWORD_TOKEN
			&& strcasecmp(context->tokenPtr->lexeme, "NOT") == 0))) {
		node->type = UNARY_OP;
		node->childCount = 0;
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}else {
			ERR("Expected `+`, `-` or NOT");
	}
	return node;
}

ParseTreeNode *parseLinenum(ParserContext *context)
{
	ParseTreeNode *node = parseIntegerLiteral(context);
	ERR_RET_NOFREE(node);
	//node->childCount = 0;
	node->type = LINENUM;
	return node;
}

ParseTreeNode *parseIntegerLiteral(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != INT_TOKEN) {
		ERR("Not a integer");
	}
	node->childCount = 0;
	node->type = INTEGER;
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseFloatLiteral(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != FLOAT_TOKEN)
		ERR("Not a float");
	node->childCount = 0;
	node->type = FLOAT;
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseStringLiteral(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != STRING_TOKEN) {
		ERR("Not a string");
	}
	node->childCount = 0;
	node->type = STRING;
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseStatement(ParserContext *context)
{
	ParseTreeNode *node;
	if (IN_RANGE && (context->tokenPtr->type == KEYWORD_TOKEN
		|| context->tokenPtr->type == IDENT_TOKEN)) {
		if (strcasecmp(context->tokenPtr->lexeme, "LET") == 0
			|| context->tokenPtr->type == IDENT_TOKEN) {
			node = parseLetStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "IF") == 0) {
			node = parseIfStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "ELSE") == 0) {
			node = parseElseStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "FI") == 0) {
			node = parseFiStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "PRINT") == 0) {
			node = parsePrintStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "INPUT") == 0) {
			node = parseInputStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "FOR") == 0) {
			node = parseForStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "NEXT") == 0) {
			node = parseForTail(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "DO WHILE") == 0) {
			node = parseDoWhileStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "DONE") == 0) {
			node = parseDoneStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "RETURN") == 0) {
			node = parseReturnStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "GOTO") == 0) {
			node = parseGotoStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "DIM") == 0) {
			node = parseDimStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "PUTCHAR") == 0) {
			node = parsePutCharStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "CLEAR") == 0) {
			node = parseClearStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "HOME") == 0) {
			node = parseHomeStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "SLEEP") == 0) {
			node = parseSleepStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "DELETE") == 0) {
			node = parseDelStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "FREE") == 0) {
			node = parseFreeStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "FUN") == 0) {
			node = parseFunStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "END FUN") == 0) {
			node = parseEndFunStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "RETURN") == 0) {
			node = parseReturnStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "GC") == 0) {
			node = parseGcStatement(context);
			ERR_RET_NOFREE(node);
		}
		else if (strcasecmp(context->tokenPtr->lexeme, "END") == 0) {
			node = parseEndStatement(context);
			ERR_RET_NOFREE(node);
		}
		else {
			ERR_NOFREE("Unknown statement type");
		}
	} else
		ERR_NOFREE("Not a statement type");

	return node;
}

ParseTreeNode *parseLetStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || ((context->tokenPtr->type != KEYWORD_TOKEN
		|| strcasecmp(context->tokenPtr->lexeme, "LET") != 0)
		&& context->tokenPtr->type != IDENT_TOKEN))
		ERR("Not a LET statement");
	node->childCount = 0;
	node->type = LET;
	if (context->tokenPtr->type == KEYWORD_TOKEN
		&& strcasecmp(context->tokenPtr->lexeme, "LET") == 0) {
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}

	node->children = malloc(3*sizeof(uintptr_t));
	node->children[0] = parseIdentifier(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	node->children[1] = parseEqual(context);
	ERR_RET(node->children[1]);
	node->childCount++;
	node->children[2] = parseExpr(context);
	ERR_RET(node->children[2]);
	node->childCount++;

  	return node;
}

ParseTreeNode *parseDimStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || ((context->tokenPtr->type != KEYWORD_TOKEN
		|| strcasecmp(context->tokenPtr->lexeme, "DIM") != 0)
		&& context->tokenPtr->type != IDENT_TOKEN))
		ERR("Not a DIM statement");
	node->childCount = 0;
	node->type = DIM;
	if (context->tokenPtr->type == KEYWORD_TOKEN
		&& strcasecmp(context->tokenPtr->lexeme, "DIM") == 0) {
		node->token = context->tokenPtr;
		CONSUME_TOKEN;
	}
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseIdentifier(context);
	ERR_RET(node->children[0]);
	node->childCount++;

  	return node;
}

ParseTreeNode *parseIfStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = IF;
	node->token = context->tokenPtr;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "IF") != 0)
			ERR("Expected IF token.\n");
	CONSUME_TOKEN;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseExpr(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	if (IN_RANGE && context->tokenPtr->type == KEYWORD_TOKEN &&
		strcasecmp(context->tokenPtr->lexeme, "THEN") == 0) {
		CONSUME_TOKEN;
		node->children = realloc(node->children, 2*sizeof(uintptr_t));
		node->children[1] = parseLinenum(context); //3
		ERR_RET(node->children[1]); //3
		node->childCount++;
	}
	return node;
}

ParseTreeNode *parseElseStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = ELSE;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "ELSE") != 0)
			ERR("Expected ELSE token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseFiStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = FI;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "Fi") != 0)
			ERR("Expected Fi token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parsePrintStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = PRINT;
	node->token = context->tokenPtr;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "PRINT") != 0)
			ERR("Expected PRINT token.\n");
	CONSUME_TOKEN;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parsePrintList(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}

ParseTreeNode *parsePutCharStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = PUTCHAR;
	node->token = context->tokenPtr;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "PUTCHAR") != 0)
			ERR("Expected PRINT token.\n");
	CONSUME_TOKEN;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parsePrintList(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}

ParseTreeNode *parseClearStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = CLEAR;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "CLEAR") != 0)
			ERR("Expected ELSE token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseHomeStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = HOME;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "HOME") != 0)
			ERR("Expected ELSE token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseGcStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = GC;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "GC") != 0)
			ERR("Expected GC token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseEndStatement(ParserContext *context) {
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = END;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "END") != 0)
			ERR("Expected END token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	return node;
}

ParseTreeNode *parseSleepStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "SLEEP") != 0)
			ERR("Expected GOTO token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->type = SLEEP;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseExpr(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}

ParseTreeNode *parsePrintList(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = PRINT_LIST;
	node->token = NULL;
	node->childCount = 0;
	do {
		if (node->childCount >= 128)
			ERR("too many print items");
		if (node->childCount > 0) {
			if (IN_RANGE && (context->tokenPtr->type == SEMICOLON_TOKEN ||
				context->tokenPtr->type == COMMA_TOKEN)) {
				CONSUME_TOKEN;
			} else
				ERR("Expected commas or semicolons");
		}
		node->children = realloc(node->children, (node->childCount+1)*sizeof(uintptr_t));
		node->children[node->childCount] = parseExpr(context);
		ERR_RET(node->children[node->childCount]);
		if (node->children[node->childCount] == NULL)
			ERR("Expected print items in PRINT statement");
		node->childCount++;
	} while (IN_RANGE);
	return node;
}

ParseTreeNode *parseInputStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = INPUT;
	node->token = context->tokenPtr;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "INPUT") != 0)
			ERR("Expected INPUT token");
	CONSUME_TOKEN;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseInputList(context);
	ERR_RET(node->children[0]);
	return node;
}

ParseTreeNode *parseInputList(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	node->type = INPUT_LIST;
	node->token = NULL;
	int i = 0;
	do {
		if (i >= 128)
			ERR("too many input items");
		if (i > 0) {
			if (IN_RANGE && (context->tokenPtr->type == SEMICOLON_TOKEN ||
				context->tokenPtr->type == COMMA_TOKEN)) {
				CONSUME_TOKEN;
			} else
				ERR("Expected commas or semicolons");
		}
		if (IN_RANGE && context->tokenPtr->type == IDENT_TOKEN) {
			ParseTreeNode *n =
				(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
			n->type = IDENTI;
			n->childCount = 0;
			n->token = context->tokenPtr;
			node->children = realloc(node->children, (i+1)*sizeof(uintptr_t));
			node->children[i++] = n;
			CONSUME_TOKEN;
		} else {
			ERR("Expected identifiers in PRINT statement");
		}
	} while (IN_RANGE);
	node->childCount = i;
	return node;
}

ParseTreeNode *parseGotoStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "GOTO") != 0)
			ERR("Expected GOTO token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->type = GOTO;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseLinenum(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}

ParseTreeNode *parseGoSubStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "GOSUB") != 0)
			ERR("Expected GOSUB token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->type = GOSUB;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseLinenum(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}

ParseTreeNode *parseForStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "FOR") != 0)
			ERR("Expected FOR token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->type = FOR;
	node->children = malloc(4*sizeof(uintptr_t));
	node->children[0] = parseIdentifier(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	node->children[1] = parseEqual(context);
	ERR_RET(node->children[1]);
	node->childCount++;
	node->children[2] = parseExpr(context);
	ERR_RET(node->children[2]);
	node->childCount++;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "TO") != 0)
			ERR("Expected TO token.\n");
	CONSUME_TOKEN;
	node->children[3] = parseExpr(context);
	ERR_RET(node->children[3]);
	node->childCount++;
	if (IN_RANGE && context->tokenPtr->type == KEYWORD_TOKEN
		&& strcasecmp(context->tokenPtr->lexeme, "STEP") == 0) {
		CONSUME_TOKEN;
		node->children = realloc(node->children, 5*sizeof(uintptr_t));
		node->children[4] = parseExpr(context);
		ERR_RET(node->children[4]);
		node->childCount++;
	}
	return node;
}

ParseTreeNode *parseForTail(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	node->childCount = 0;
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "NEXT") != 0)
			ERR("Expected NEXT token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->token = context->tokenPtr;
	node->type = NEXT;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseIdentifier(context);
	ERR_RET(node->children[0]);
	node->childCount = 1;
	return node;
}

ParseTreeNode *parseDoWhileStatement(ParserContext *context)
{
	ParseTreeNode *node =
		(ParseTreeNode *)calloc(1, sizeof(ParseTreeNode));
	if (!IN_RANGE || context->tokenPtr->type != KEYWORD_TOKEN ||
		strcasecmp(context->tokenPtr->lexeme, "DO WHILE") != 0)
			ERR("Expected DO WHILE token.\n");
	node->token = context->tokenPtr;
	CONSUME_TOKEN;
	node->type = DO_WHILE;
	node->children = malloc(sizeof(uintptr_t));
	node->children[0] = parseExpr(context);
	ERR_RET(node->children[0]);
	node->childCount++;
	return node;
}
